dump layer data

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,6 +18,7 @@ else()
     add_subdirectory(embedding)
     add_subdirectory(eval-callback)
     add_subdirectory(dump-mlp-data)
+    add_subdirectory(dump-layer-data)
 
     add_subdirectory(gguf-hash)
     add_subdirectory(gguf)
